feat: Implement viewing the original files.

--- a/static/index.html
+++ b/static/index.html
@@ -29,22 +29,10 @@
 
     <button type="button" id="show" onclick="showHandler()">Show</button>
     <div id="grid">
-        <!-- <div class="file">
-            <img src="https://uc656d2baba7ad163d267aceeec6.dl.dropboxusercontent.com/cd/0/get/CDH7-w9Qcx39JOJNlDWP0ygLqqa3w7mTmSxzUrAk0MkqDf02ya-FWTVt9_MWkyY00dLqtZbP8wHnGL3DYm1JwXGR1tpWAqzQY7DXgLlffWHQ5U8Jo7aVZOtutfQEwLiGRYQT7RDRQul9OG68sw3n6RmXe9ZwifQwscxA7ROqfznbvhiv1KHXV4eEOmHBDGxgi0Y/file">
-            <p>img1.png</p>
-        </div>
-        <div class="file">
-            <img src="https://uc5cb94bfd2b4fa76e03a9afa96b.dl.dropboxusercontent.com/cd/0/get/CDF7qT_YMuJyezCVGzaDkDB6TRjqa_CA3Mptd-VDxE9YiqN0cFD96m-HzCS-xkA_kLPD8wDG-pwhTWGvidlSBHLWQummQOvZ_--uuLXZkipXEDIxlk2MazZ_19jKByks7UYiht1pvrs9aIOATZf-vMpI2EwTxNkwN48PLmlf84PjneRQEHJTpKYHil6zhURtX8w/file">
-            <p>img2.png</p>
-        </div>
-        <div class="file">
-            <img src="https://uc11ccd4cd4c8d4a7517f910baf1.dl.dropboxusercontent.com/cd/0/get/CDEw_oQmScRT_RsnwuHPfbTOSPgFnMzvI6k12I3spmFRL6TG4V3WyQlGit0AZExPNNF0V9BakW9hiTf3i7MHg6elD5FCUFuukrTfnY1DEIo0PovLpJS2FJ0quocRtNJhpW1fR7lCZMMp08oOVLKdD_OhoXDV9D-fYM3pyKB3XrhbnGjA54Ub4hcUZq2uGS-0C6M/file">
-            <p>img3.png</p>
-        </div>
-        <div class="file">
-            <img src="https://ucb3f61986ebf2b821c1b25fa88d.dl.dropboxusercontent.com/cd/0/get/CDHSFGOkySqBVygeGWClcOoGm-8cAEVJ-KjdouQgQ6E4ttlP_XO97TxH-6jV3QZcBtEIzdEFEMRhRhsGsFrlZ9dIn7ExtoUMKeVcOYOf1EnuAfqc0RoGilUHCK-jxY-9sqHCxEhLJNeiUMOXDY7M2ZxQkaH-JfRDidBAagoekiRzFyDGx-Lm6VR0jPK0TeJRPgw/file">
-            <p>img4.png</p>
-        </div> -->
+    </div>
+
+    <div>
+        <img id="view_file" src="">
     </div>
 
 </body>
